Update command-center to use default VWF navigation. Refs #3119.

--- a/public/command-center/index.vwf.yaml
+++ b/public/command-center/index.vwf.yaml
@@ -8,9 +8,14 @@ properties:
   userObject:
     extends: http://vwf.example.com/node3.vwf
     implements: [ "http://vwf.example.com/navigable.vwf" ]
+    properties:
+      translation: [ -300, -120, 70 ]
+      rotation: [ 0, 0, -1, 20 ]
     children:     
       camera:
         extends: http://vwf.example.com/camera.vwf
+        properties:
+          near: 1
 methods:
   initializeCamera:
 children:
@@ -438,16 +443,3 @@ children:
     extends: http://vwf.example.com/node3.vwf
     source: joc/tv_screens.DAE
     type: model/vnd.collada+xml
-scripts:
-- |
-  this.initialize = function() {
-    this.translationSpeed = 5;
-    this.rotationSpeed = 0.333;
-    this.future( 0 ).initializeCamera();
-  } 
-
-  this.initializeCamera = function() {
-    this.camera.near = 1;
-    this.camera.translation = [ -300, -120, 70 ]; 
-    this.camera.rotation = [ 0, 0, -1, 20 ];
-  }//@ sourceURL=index.vwf
