--- a/public/command-center/index.vwf.yaml
+++ b/public/command-center/index.vwf.yaml
@@ -4,6 +4,7 @@
 extends: http://vwf.example.com/scene.vwf
 properties:
   ambientColor: [ 250, 250, 250 ]
+  boundingBox: [ [ -390, 650 ], [ -180, 450 ], [ 70, 70 ] ]
   usersShareView: false
   userObject:
     extends: http://vwf.example.com/node3.vwf
