--- a/public/minesweeper/index.vwf.yaml
+++ b/public/minesweeper/index.vwf.yaml
@@ -12,8 +12,9 @@
 # the License.
 
 ---
-extends: appscene.vwf
+extends: http://vwf.example.com/scene.vwf
 properties:
+  navmode: none
   ambientColor: [ 183, 183, 183 ]
   tilePosition1: [  16.5, -33, 0 ]
   tilePosition2: [   5.5, -33, 0 ]
