Fix mine synchronization issue when a second client joins after the first has started the game
Refs #3137

--- a/public/minesweeper/index.vwf.yaml
+++ b/public/minesweeper/index.vwf.yaml
@@ -607,13 +607,13 @@ scripts:
 
     this.shuffle = function() {
       var tmp, current, top = this.tileMap.length;
-
       if(top) while(--top) {
         current = Math.floor(this.random() * (top + 1));
         tmp = this.tileMap[current];
         this.tileMap[current] = this.tileMap[top];
         this.tileMap[top] = tmp;
       }
+      this.tileMap = this.tileMap;
     }
     
     this.setupGame = function() { 
