Make visible property recursive in vwf nodes instead of the underlying three.js object, so that it replicates correctly.
Refs #3176

--- a/support/proxy/vwf.example.com/node3.vwf.yaml
+++ b/support/proxy/vwf.example.com/node3.vwf.yaml
@@ -318,7 +318,15 @@ properties:
   ## @name node3.vwf#visible
   ## @property
 
-  visible: true
+  visible: 
+    set: |
+      this.visible = value;
+      if(this.children) {
+        for(var i in this.children) {
+          this.children[i].visible = value;
+        }
+      }
+    value: true
 
 events:
 
