--- a/public/bzflag/laser.vwf.yaml
+++ b/public/bzflag/laser.vwf.yaml
@@ -33,7 +33,7 @@ scripts:
     this.laserModel.visible = true;
     this.laserParticle.visible = true;
     this.explosion.visible = false;
-    this.future(0.05).processFire();
+    this.processFire();
   };
   this.calculateCollisionInfo = function(translateDelta, checkBefore) {
     var newCollisionInfo = {};
