--- a/support/cli/sample_app/index.vwf.yaml
+++ b/support/cli/sample_app/index.vwf.yaml
@@ -1,3 +1,3 @@
 # Simplest possible VWF applcation.
-# See http://virtual.wf/web/docs for more information.
+# See http://virtual.wf/getting_started.html for more information.
 --- 
