Revert "Stop building docs as part of rake."
This reverts commit d77db1a87b9dd8d563ed27a898cbe57a39f30c6d.

--- a/support/client/Rakefile
+++ b/support/client/Rakefile
@@ -36,7 +36,7 @@ CLOBBER.include DESTINATION, DOCUMENTATION
 
 desc "Run the RequireJS optimizer."
 
-task :build => [ :clean, :compile, :compress ]
+task :build => [ :clean, :compile, :compress, :documentation ]
 
 desc "Generate the compilation script."
 
