--- a/support/proxy/vwf.example.com/node3.vwf.yaml
+++ b/support/proxy/vwf.example.com/node3.vwf.yaml
@@ -46,7 +46,7 @@ properties:
   worldTransform:
     set: |
       var parentInverse = goog.vec.Mat4.create();
-      if ( this.parent && goog.vec.Mat4.invert( this.transformFromValue( this.parent.worldTransform ), parentInverse ) ) {
+      if ( this.parent && goog.vec.Mat4.invert( this.transformFromValue( this.unwrap(this.parent.worldTransform) ), parentInverse ) ) {
         var transform = goog.vec.Mat4.multMat( parentInverse, this.transformFromValue( value ), goog.vec.Mat4.create() );
         this.transform = transform;
       } else {
@@ -55,7 +55,7 @@ properties:
     get: |
       if( this.parent && this.parent.worldTransform && this.transform )
       {
-        return goog.vec.Mat4.multMat( this.parent.worldTransform, this.transform, goog.vec.Mat4.create() );
+        return goog.vec.Mat4.multMat( this.unwrap(this.parent.worldTransform), this.unwrap(this.transform), goog.vec.Mat4.create() );
       }
       else return this.transform; //@ sourceURL=node3.worldTransform.get.vwf
 
@@ -67,7 +67,7 @@ properties:
   transform:
     set: |
       var transform = this.transformFromValue( value ); // parse incoming value
-      if ( ! goog.vec.Mat4.equals( this.transform || goog.vec.Mat4.createIdentity(), transform ) ) {
+      if ( ! goog.vec.Mat4.equals( this.unwrap(this.transform) || goog.vec.Mat4.createIdentity(), transform ) ) {
         this.transform = transform;
         this.transformChanged( transform );
       }  //@ sourceURL=node3.transform.set.vwf
@@ -82,13 +82,13 @@ properties:
     # node.translation <= [ x, y, z ]
     set: |
       var translation = this.translationFromValue( value ); // parse incoming value
-      var transform = this.transform || goog.vec.Mat4.createIdentity();
+      var transform = this.unwrap(this.transform) || goog.vec.Mat4.createIdentity();
       goog.vec.Mat4.setColumnValues( transform, 3, translation[0], translation[1], translation[2], 1 );
       this.transform = transform; //@ sourceURL=node3.translation.set.vwf
     # node.translation => [ x, y, z ]
     get: |
       var translation = goog.vec.Vec3.create();
-      goog.vec.Mat4.getColumn( this.transform || goog.vec.Mat4.createIdentity(), 3, translation );
+      goog.vec.Mat4.getColumn( this.unwrap(this.transform) || goog.vec.Mat4.createIdentity(), 3, translation );
       return translation;
 
   ## Rotation of 3D node
@@ -111,7 +111,7 @@ properties:
     get: |
       var rotation = goog.vec.Vec4.create();
       rotation[3] = goog.vec.Quaternion.toAngleAxis(
-        this.quaternion || goog.vec.Quaternion.createFromValues( 0, 0, 0, 1 ),
+        this.unwrap(this.quaternion) || goog.vec.Quaternion.createFromValues( 0, 0, 0, 1 ),
         rotation
       ) * 180 / Math.PI;
       return rotation;
@@ -124,7 +124,7 @@ properties:
   rotationMatrix:
     get: |
       return this.unscaledTransform(
-        this.transform || goog.vec.Mat4.createIdentity(),
+        this.unwrap(this.transform) || goog.vec.Mat4.createIdentity(),
         goog.vec.Vec3.create(),
         goog.vec.Mat4.create()
       );
@@ -138,7 +138,7 @@ properties:
   quaternion:
     # node.quaternion <= [ x, y, z, w ]
     set: |
-      var transform = this.transform || goog.vec.Mat4.createIdentity();
+      var transform = this.unwrap(this.transform) || goog.vec.Mat4.createIdentity();
       var translation = goog.vec.Vec4.create(); goog.vec.Mat4.getColumn( transform, 3, translation );
       var scale = this.transformScale( transform, goog.vec.Vec3.create() );
       var quaternion = this.quaternionFromValue( value ); // parse incoming value
@@ -153,7 +153,7 @@ properties:
     get: |
       return goog.vec.Quaternion.fromRotationMatrix4(
         this.unscaledTransform(
-          this.transform || goog.vec.Mat4.createIdentity(),
+          this.unwrap(this.transform) || goog.vec.Mat4.createIdentity(),
           goog.vec.Vec3.create(),
           goog.vec.Mat4.create()
         ),
@@ -170,7 +170,7 @@ properties:
     # node.scale <= [ x, y, z ], node.scale <= s
     set: |
       var scale = this.scaleFromValue( value ); // parse incoming value
-      var transform = this.transform || goog.vec.Mat4.createIdentity();
+      var transform = this.unwrap(this.transform) || goog.vec.Mat4.createIdentity();
       this.scaledTransform(
         this.unscaledTransform(
           transform,
@@ -184,7 +184,7 @@ properties:
     # node.scale => [ x, y, z ]
     get: |
       return this.transformScale(
-        this.transform || goog.vec.Mat4.createIdentity(),
+        this.unwrap(this.transform) || goog.vec.Mat4.createIdentity(),
         goog.vec.Vec3.create()
       );
 
@@ -214,7 +214,7 @@ properties:
     set: |
       this.logger.info("WARNING: node3 worldBoundingBox cannot be set" )
     get: |
-      var worldTransform = this.worldTransform;
+      var worldTransform = this.unwrap(this.worldTransform);
       if ( worldTransform ) {
         var worldBoundingBox;
         for(var i=0;i<this.children.length;i++) {
@@ -234,7 +234,7 @@ properties:
           }
         }
         if( !worldBoundingBox ) {
-          worldBoundingBox = this.boundingbox;
+          worldBoundingBox = this.unwrap(this.boundingbox);
           if ( worldBoundingBox ) {
             var coord0=goog.vec.Mat4.multVec4(worldTransform,[worldBoundingBox.min.x,worldBoundingBox.min.y,worldBoundingBox.min.z,1], goog.vec.Vec4.create() );
             var coord1=goog.vec.Mat4.multVec4(worldTransform,[worldBoundingBox.max.x,worldBoundingBox.min.y,worldBoundingBox.min.z,1], goog.vec.Vec4.create() );
@@ -255,7 +255,7 @@ properties:
         return worldBoundingBox;
       }
       else {
-        return this.boundingbox;
+        return this.unwrap(this.boundingbox);
       } 
 
   ## Offset from center of 3D node
@@ -369,6 +369,11 @@ events:
 scripts:
 
 - |
+  //remove the watchable interface from a property
+  this.unwrap = function(val){
+    if(val && val.internal_val) return val.internal_val;
+    return val;
+  }
   // Parse a parameter as a transform specification.
   this.transformFromValue = function( value ) {
     return value && value.length >= 16 ?
@@ -437,11 +442,11 @@ scripts:
     return scale;
   };
   this.state = function( test ) {
-    vwf.logger.info( test, "x", Array.prototype.slice.apply( this.transform || goog.vec.Mat4.createIdentity() ) );
-    vwf.logger.info( test, "t", Array.prototype.slice.apply( this.translation || goog.vec.Vec3.create() ) );
-    vwf.logger.info( test, "o", Array.prototype.slice.apply( this.rotation || goog.vec.Vec4.createFromValues( 1, 0, 0, 0 ) ) );
-    vwf.logger.info( test, "s", Array.prototype.slice.apply( this.scale || goog.vec.Vec3.createFromValues( 1, 1, 1 ) ) );
-    vwf.logger.info( test, "q", Array.prototype.slice.apply( this.quaternion || goog.vec.Quaternion.createFromValues( 0, 0, 0, 1 ) ) );
+    vwf.logger.info( test, "x", Array.prototype.slice.apply( this.unwrap(this.transform) || goog.vec.Mat4.createIdentity() ) );
+    vwf.logger.info( test, "t", Array.prototype.slice.apply( this.unwrap(this.translation) || goog.vec.Vec3.create() ) );
+    vwf.logger.info( test, "o", Array.prototype.slice.apply( this.unwrap(this.rotation) || goog.vec.Vec4.createFromValues( 1, 0, 0, 0 ) ) );
+    vwf.logger.info( test, "s", Array.prototype.slice.apply( this.unwrap(this.scale) || goog.vec.Vec3.createFromValues( 1, 1, 1 ) ) );
+    vwf.logger.info( test, "q", Array.prototype.slice.apply( this.unwrap(this.quaternion) || goog.vec.Quaternion.createFromValues( 0, 0, 0, 1 ) ) );
   };
   this.test1 = function() {
     this.transform = [];
